--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,6 @@
     "angular-animate": "^1.6.8",
     "angular-sanitize": "^1.6.8",
     "angular-bootstrap": "^2.5.0",
-    "angular-route": "^1.6.8"
+    "angular-ui-router": "^1.0.12"
   }
 }
